# python_django_practice

./: .env.production.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  manage.py
backend/api/: filters.py  pagination.py  serializers.py  urls.py  views.py
backend/foodgram/: settings.py  urls.py
backend/recipes/: admin.py  models.py
backend/recipes/management/commands/: import_data.py
backend/users/: admin.py  models.py
frontend/: Dockerfile
infra/: docker-compose.yml
