[project]
name = "python-django-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    # Основной фреймворк и API
    "django==4.2.16",
    "djangorestframework==3.15.2",
    "djoser==2.1.0",
    # Документация API
    "drf-spectacular>=0.30.0",
    # CORS и фильтрация
    "django-cors-headers==4.6.0",
    "django-filter==23.1",
    # Аутентификация
    "social-auth-app-django==4.0.0",
    "social-auth-core==4.5.4",
    "pyjwt==2.9.0",
    "cryptography==43.0.3",
    # База данных и сервер
    "psycopg2-binary==2.9.3",
    "gunicorn==23.0.0",
    # Изображения
    "pillow==9.3.0",
    # Утилиты
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "django-admin-autocomplete-filter>=0.7.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "venv/",
    ".venv/",
    "tests/",
    "**/migrations/",
    ".*/__pycache__/",
    "frontend/",
    "postman_collection/",
    "infra",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
# Форматирование фрагментов кода в докстрингах
docstring-code-format = true
# Стиль кавычек
quote-style = "single"
# Перенос элементов в зависимости от запятой в конце строки
skip-magic-trailing-comma = false
exclude = [
    "venv/",
    ".venv/",
    "tests/",
    "**/migrations/",
    ".*/__pycache__/",
    "frontend/",
    "postman_collection/",
    "infra",
]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
follow_imports = "skip"
exclude = [
    "venv/",
    ".venv/",
    "tests/",
    ".*/migrations/",
    ".*/__pycache__/",
    "frontend/",
    "postman_collection/",
    "infra",
]
cache_dir = ".mypy_cache"
